Updated border radius of the integrated google map to prevent map features from being cut off

--- a/css/location.css
+++ b/css/location.css
@@ -128,7 +128,7 @@ h2{
 iframe{
     width: 80%;
     height: 400px;
-    border-radius: 50px;
+    border-radius: 10px;
     margin-bottom: 10px;
 }
 
